<resources>
    <string name="app_name">Kalkulator</string>
    <string name="backspace">Back</string>
    <string name="divide">/</string>
    <string name="multiply">x</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="minus">-</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="plus">+</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="res">=</string>
    <string name="zero">0</string>
    <string name="procent">%</string>
    <string name="decimalDot">.</string>
    <string name="clear">C</string>
    <string name="ac">AC</string>
    <string name="bracket1">(</string>
    <string name="bracket2">)</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="log">log</string>
    <string name="ln">ln</string>
    <string name="factorial">!</string>
    <string name="power">^</string>
    <string name="sqrt">√</string>
    <string name="inverse">1/</string>
    <string name="pi">π</string>
    <string name="tan">tan</string>
    <string name="plusMinus">±</string>
</resources>