<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SimpleCalculator"
    android:rowCount="8"
    android:columnCount="4"
    android:background="@color/white"
    >

    <TextView
        android:id="@+id/resultTV"
        style="@style/result_style"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:maxLines="1"
        app:autoSizeTextType="uniform"
        app:autoSizeMaxTextSize="@dimen/text_view_auto_size_max_text_size"
        app:autoSizeMinTextSize="@dimen/text_view_auto_size_min_text_size"
        app:autoSizeStepGranularity="@dimen/text_view_auto_size_step_granularity" />

    <Button
        android:id="@+id/buttonC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/clear"
        style="@style/cell_style" />

    <Button
        android:id="@+id/buttonAC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/ac"
        style="@style/cell_style" />
    <Button
        android:id="@+id/buttonPlusMinus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plusMinus"
        style="@style/cell_style" />

    <Button
        android:id="@+id/buttonDivide"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/divide"
        style="@style/cell_style" />

    <Button
        android:id="@+id/buttonSeven"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/seven"
        style="@style/cell_style" />

    <Button
        android:id="@+id/buttonEight"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/eight"
        style="@style/cell_style" />

    <Button
        android:id="@+id/buttonNine"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nine"
        style="@style/cell_style" />
    <Button
        android:id="@+id/buttonMultiply"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/multiply"
        style="@style/cell_style" />

    <Button
        android:id="@+id/buttonFour"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/four"
        style="@style/cell_style" />

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/five"
        style="@style/cell_style" />

    <Button
        android:id="@+id/buttonSix"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/six"
        style="@style/cell_style" />
    <Button
        android:id="@+id/buttonMinus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/minus"
        style="@style/cell_style" />

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/one"
        style="@style/cell_style" />

    <Button
        android:id="@+id/buttonTwo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/two"
        style="@style/cell_style" />

    <Button
        android:id="@+id/buttonThree"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/three"
        style="@style/cell_style" />
    <Button
        android:id="@+id/buttonPlus"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/plus"
        style="@style/cell_style" />

    <Button
        android:id="@+id/buttonZero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/cell_style"
        android:text="@string/zero"
        android:layout_columnSpan="2" />
    <Button
        android:id="@+id/buttonDecimal"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/cell_style"
        android:text="@string/decimalDot" />
    <Button
        android:id="@+id/buttonEquals"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowSpan="1"
        android:text="@string/res"
        style="@style/cell_style" />
</GridLayout>